Fix bug and forsake SettingActivity